import { renderTheme } from "../../styles/render-theme";
import { SectionBackground } from ".";
import { screen } from "@testing-library/react";
describe("<SectionBackground />", () => {
  it("should render with background dark", () => {
    const { container } = renderTheme(
      <SectionBackground background={true}>
        <h1>Children</h1>
      </SectionBackground>
    );
    expect(screen.getByRole("heading")).toBeInTheDocument();
    expect(container).toMatchSnapshot();
  });

  it("should render with background light", () => {
    const { container } = renderTheme(
      <SectionBackground>
        <h1>Children</h1>
      </SectionBackground>
    );
    expect(screen.getByRole("heading")).toBeInTheDocument();
    expect(container).toMatchSnapshot();
  });
});
