// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SectionBackground /> should render with background dark 1`] = `
<div>
  <div
    class="sc-bczSft exAuwe"
  >
    <div
      class="sc-gsnScm iuPRvZ"
    >
      <h1>
        Children
      </h1>
    </div>
  </div>
</div>
`;

exports[`<SectionBackground /> should render with background light 1`] = `
<div>
  <div
    class="sc-bczSft hbyQKU"
  >
    <div
      class="sc-gsnScm iuPRvZ"
    >
      <h1>
        Children
      </h1>
    </div>
  </div>
</div>
`;
